@@ -48,6 +48,7 @@ CPMAddPackage( "gh:nlohmann/json@3.11.2" )
 
 # Subprojects
 add_subdirectory ( lib )
+add_library ( dgm::dgm ALIAS dgm-lib )
 
 if ( ${ENABLE_SANDBOX} )
 	add_subdirectory ( sandbox )
