@@ -10,4 +10,4 @@ CPMAddPackage("gh:nerudaj/dgm-lib#main")
 
 add_executable ( ${PROJECT_NAME} Main.cpp )
 
-target_link_libraries ( ${PROJECT_NAME} libdgm sfml-main )
+target_link_libraries ( ${PROJECT_NAME} dgm::dgm sfml-main )
