@@ -15,4 +15,4 @@ FetchContent_MakeAvailable ( LIBDGM_GIT )
 
 add_executable ( ${PROJECT_NAME} Main.cpp )
 
-target_link_libraries ( ${PROJECT_NAME} libdgm sfml-main )
+target_link_libraries ( ${PROJECT_NAME} dgm::dgm sfml-main )
