@@ -7,7 +7,7 @@ add_executable ( ${TARGET} WIN32
 )
 
 target_link_libraries ( ${TARGET}
-	LINK_PRIVATE libdgm
+	LINK_PRIVATE dgm::dgm
 )
 
 apply_compile_options ( ${TARGET} )
